# govuk-bank-holidays

./: .editorconfig  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  setup_extensions.py  tests.py  tox.ini
.github/workflows/: lint.yml  release.yml  test.yml
govuk_bank_holidays/: __init__.py  bank-holidays.json  bank_holidays.py  i18n.py  setup_extensions.py
govuk_bank_holidays/locale/cy/LC_MESSAGES/: messages.po
govuk_bank_holidays/locale/en/LC_MESSAGES/: messages.po
scripts/: messages.py  update-cache.py  update-cached-holidays.py
tests/: test_bank_holidays.py
