[metadata]
name = govuk-bank-holidays
version = attr: govuk_bank_holidays.__version__
url = https://github.com/ministryofjustice/govuk-bank-holidays
author = Ministry of Justice Digital & Technology
author_email = dev@digital.justice.gov.uk
description = Tool to load UK bank holidays from GOV.UK
long_description = file: README.rst
license = MIT
keywords =
    bank holidays
    govuk
    uk
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
; NB: looser python version requirement than what's tested
python_requires = >=3.6
packages =
    govuk_bank_holidays
    govuk_bank_holidays.locale.cy.LC_MESSAGES
    govuk_bank_holidays.locale.en.LC_MESSAGES
include_package_data = true
install_requires =
    requests

[flake8]
exclude = .git/,.eggs/,.tox/,build/,dist/,env/,venv/
max-complexity = 10
max-line-length = 120

[coverage:run]
omit =
    setup.py
    */tests/*
    .eggs/*
    .tox/*
